fixed image alignment issues

--- a/css/islandora_solr_gmap.css
+++ b/css/islandora_solr_gmap.css
@@ -1,3 +1,8 @@
+#islandora-solr-image-item {
+  max-width: 90%;
+  max-height: 90%;
+}
+
 #islandora-solr-gmap
 {
   width: 100%;
@@ -9,6 +14,16 @@
   position: relative;
 }
 
+#islandora-solr-gmap-items
+{
+//  max-width: 90%;
+//  max-height: 90%;
+  margin-left: auto;
+  margin-right: auto;
+//  margin-top: auto;
+//  margin-bottom: auto;
+}
+
 #gmap-overlay-wrap
 {
   display: none;
@@ -17,13 +32,13 @@
   top: 25px;
   left: 25px;
   bottom: 25px;
-  
-  
+
+
 /*  width: 200px;
   height: 700px;*/
   background: #fff;
   background: rgba(255, 255, 255, 1);
-  
+
   box-shadow: 5px 5px 5px #333;
 }
 
@@ -42,8 +57,9 @@
 
 #gmap-overlay
 {
-  float: left;
+/*  float: left;*/
   width: 100%;
+  height: 100%;
 }
 
 #gmap-overlay-hover-wrap
@@ -52,11 +68,11 @@
   position: absolute;
   right: 25px;
   bottom: 25px;
-  
+
   width: 150px;
   height: 150px;
   background: #fff;
   background: rgba(255, 255, 255, 1);
-  
+
   box-shadow: 5px 5px 5px #333;
 }
